# papyrusai

./: README.md  pyproject.toml
config/: anatomy.yaml  bible.yaml  psychology.yaml
examples/: anatomy.py  bible.py  psychology.py
papyrusai/: converting.py  models.py  reading.py  writing.py
papyrusai/reading/: __init__.py  base.py  gpt.py  mistral.py
